--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,185 @@
         <div class="container">
             <div class="step">03</div>
             <div class="as_h1">Отзывы клиентов</div>
+
+            <div class="owl-carousel owl-theme">
+                <div class="item">
+                    <div class="guestbook__image">
+                        <img src="./img/logo_client_01.png" alt="alt">
+                    </div>
+                    <div class="guestbook__body">
+                       <div class="text">
+                           <p>Работаем с &laquo;Красбер&raquo; еще с тех бородатых времен, &nbsp;когда люди были очень маленькими, компьютеры очень большими, по земле бегали мамонты, а ребята были простыми фрилансерами. Начинали сотрудничество с небольших заказов и мелких разовых доработок, вроде перевода сайта на бутстрап, программирования парсера планировок и т.п. Сейчас ведем полноценное сотрудничество в области создания с нуля и поддержки высоконагруженных проектов и технологичных стартапов в области недвижимости.</p>
+                       </div>
+                        <div class="company">
+                            JackBlackSeo, Тюмень
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <div class="guestbook__image">
+                        <img src="./img/logo_client_02.svg" alt="alt">
+                    </div>
+                    <div class="guestbook__body">
+                        <div class="text">
+                            <p>Организация ИП Наумец А.В. (Санкт-Петербург) - кооператив &quot;Медведь&amp;Слон&quot; - производитель и продавец натуральных продуктов и эко-подарков благодарит компанию КРАСБЕР за работу и создание сайта&nbsp;medvedislon.com. С благодарностью отмечаем высокий профессионализм, качество и скорость оказанных услуг, приемлимые цены, а так же незаменимую помощь в формировании тех.задания и построения планов развития.&nbsp;</p>
+                            <p>По новым задачам и проектам будем непременно обсуждать и сотруднчать с профессионалами КРАСБЕР.</p>
+                            <p>С уважением, Наумец А.В. 04.09.2017&nbsp;</p>
+                        </div>
+                        <div class="company">
+                            Медведь&Слон, Санкт-Петербург
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="step">04</div>
+            <div class="as_h1">Портфолио</div>
+
+            <div class="portfolio__list">
+
+                <div class="portfolio__list-item" style="background-image: url('../img/portfolio-01.jpg')">
+                    <div class="body">
+                        <div class="name">
+                            <a href="#">Создание лэндинга для салона Misslisse</a>
+                        </div>
+                        <div class="desc">
+                            <ul>
+                                <li>- мобильная версия</li>
+                                <li>- доработка новых модулей</li>
+                                <li>- разработка рекламно кампании</li>
+                            </ul>
+                        </div>
+                        <div class="tags">
+                            <span>контекст</span>
+                            <span>seo</span>
+                        </div>
+                        <div class="link__more">
+                            <div class="link__more-text">
+                                <a href="#">ПОДРОБНЕЕ</a>
+                            </div>
+                            <div class="link__more-icon">
+                                <svg class="inline-svg-icon link">
+                                    <use xlink:href="./img/symbols.svg#link"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio__list-item" style="background-image: url('../img/portfolio-02.jpg')">
+                    <div class="body">
+                        <div class="name">
+                            <a href="#">Создание лэндинга для салона Misslisse</a>
+                        </div>
+                        <div class="desc">
+                            <ul>
+                                <li>- мобильная версия</li>
+                                <li>- доработка новых модулей</li>
+                                <li>- разработка рекламно кампании</li>
+                            </ul>
+                        </div>
+                        <div class="tags">
+                            <span>контекст</span>
+                            <span>seo</span>
+                        </div>
+                        <div class="link__more">
+                            <div class="link__more-text">
+                                <a href="#">ПОДРОБНЕЕ</a>
+                            </div>
+                            <div class="link__more-icon">
+                                <svg class="inline-svg-icon link">
+                                    <use xlink:href="./img/symbols.svg#link"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio__list-item" style="background-image: url('../img/portfolio-03.jpg')">
+                    <div class="body">
+                        <div class="name">
+                            <a href="#">Создание лэндинга для салона Misslisse</a>
+                        </div>
+                        <div class="desc">
+                            <ul>
+                                <li>- мобильная версия</li>
+                                <li>- доработка новых модулей</li>
+                                <li>- разработка рекламно кампании</li>
+                            </ul>
+                        </div>
+                        <div class="tags">
+                            <span>контекст</span>
+                            <span>seo</span>
+                        </div>
+                        <div class="link__more">
+                            <div class="link__more-text">
+                                <a href="#">ПОДРОБНЕЕ</a>
+                            </div>
+                            <div class="link__more-icon">
+                                <svg class="inline-svg-icon link">
+                                    <use xlink:href="./img/symbols.svg#link"></use>
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="btn__more">
+                    <a href="#" class="btn green">БОЛЬШЕ РАБОТ</a>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+    <section class="we__work">
+        <div class="container">
+            <div class="step">05</div>
+            <div class="as_h1">Мы работаем</div>
+            <div class="we__work-list">
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-01.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-02.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-03.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-04.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-05.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-06.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-07.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-08.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-09.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-10.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-11.jpg" alt="">
+                </div>
+                <div class="we__work-list-item">
+                    <img src="./img/we_work-12.png" alt="">
+                </div>
+            </div>
         </div>
     </section>
 
